# magnet_monitor

./: .gitignore  CMakeLists.txt  MRIDataReading  README.md  com.invendis.magnetmonitor.plist  config.json  docker-compose.yml  run.sh  toolchain-openwrt.cmake
docker/: Dockerfile
scripts/: cross_build.sh
src/: config.cpp  config.h  ftp_downloader.cpp  ftp_downloader.h  main.cpp  memory_monitor.cpp  memory_monitor.h  mqtt_publisher.cpp  mqtt_publisher.h  mqtt_publisher_stub.cpp  parser.cpp  parser.h  utils.cpp  utils.h
